# clinical-pilot-hf

./: .env.example  .gitignore  INSTRUCTIONS.md  Makefile  README.md  README_OLD.md  SETUP.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  contracts.py  orchestrator.py  state.py
app/agents/appointment/: api.py  mocks.py  tasks.py
app/agents/clerical/: api.py  mocks.py
app/agents/discharge/: api.py  mocks.py
app/agents/documentation/: api.py  cli.py  mocks.py  retrieval.py
app/agents/documentation/prompts/: soap_v1.md
app/agents/handover/: api.py  mocks.py
app/agents/roster/: api.py  mocks.py  scheduler.py
app/agents/wiki/: api.py
app/api/: main.py
app/api/middleware/: audit.py
app/api/routers/: appointment.py  clerical.py  discharge.py  documentation.py  handover.py  roster.py
app/db/: models.py  session.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_init.py
app/integrations/: calendar_mcp.py  drive_mcp.py  gmail_mcp.py  local_calendar.py  telegram.py  whatsapp.py  whisper.py
app/llm/: router.py
app/retrieval/: bm25_index.py  chroma_index.py  corpus.py  index_api.py  paths.py
app/ui/: doctor_tab.py  nurse_admin_tab.py  patient_tab.py
deploy/hf_space/: app.py  gradio_app.py  requirements.txt
evals/ragas/: run.py  scoring.py
evals/ragas/golden/: age-diarrhoea.json  asthma-exac.json  cap-cough.json  dengue-fever.json  gerd-heartburn.json  htn-followup.json  hypothyroid-fatigue.json  migraine-headache.json  t2dm-review.json  uti-dysuria.json
infra/: alembic.ini  docker-compose.dev.yml
plans/: LEGAL_SOURCES.md  MARKET_ANALYSIS.md  MASCOT.md  PERSON_C_COMMANDS.md  PLAN.md  PLAN_PERSON_A.md  PLAN_PERSON_B.md  PLAN_PERSON_C.md
raw_data/duty_roster/: roster.csv
scripts/: build_indices.py  check_enum.py  fetch_data.sh  seed_demo.py  test_sql.py
tests/: test_contracts.py  wa_sim.py
tests/test_appointment/: test_happy_path.py
tests/test_clerical/: test_happy_path.py
tests/test_discharge/: test_happy_path.py
tests/test_documentation/: test_agent.py  test_evals.py  test_retrieval.py  test_wiki_lint.py
tests/test_handover/: test_handover_agent.py
tests/test_integrations/: test_local_calendar.py  test_telegram.py
tests/test_orchestrator/: test_routing.py
tests/test_roster/: test_roster_agent.py
wiki/: README.md
wiki/conditions/: acute-gastroenteritis.md  asthma-exacerbation.md  community-acquired-pneumonia.md  dengue-fever.md  gerd.md  hypertension.md  hypothyroidism.md  migraine.md  type-2-diabetes.md  urinary-tract-infection.md
wiki/drugs/: amlodipine.md
